include_directories(${CMAKE_SOURCE_DIR}/include)

add_executable(ace-rs-mg main.c hkdf.c hkdf.h utils.c utils.h cwt.c cwt.h utils.c utils.h edhoc.c edhoc.h types.h cose.c cose.h)
add_executable(edhoc-test test.c hkdf.c hkdf.h utils.c utils.h cwt.c cwt.h utils.c utils.h protocol.c protocol.h edhoc.c edhoc.h types.h cose.c cose.h)
add_executable(client-coap-mg coap_client.c hkdf.c hkdf.h utils.c utils.h cwt.c cwt.h utils.c utils.h protocol.c protocol.h edhoc.c edhoc.h types.h cose.c cose.h)
add_executable(server-coap-mg coap_server.c hkdf.c hkdf.h utils.c utils.h cwt.c cwt.h utils.c utils.h protocol.c protocol.h edhoc.c edhoc.h types.h cose.c cose.h)
target_include_directories(ace-rs-mg PUBLIC ${CRYPTOAUTH_SOURCE_DIR}/lib)
target_include_directories(edhoc-test PUBLIC ${CRYPTOAUTH_SOURCE_DIR}/lib)
#target_include_directories(client-coap-mg PUBLIC ${CRYPTOAUTH_SOURCE_DIR}/lib)
#target_include_directories(server-coap-mg PUBLIC ${CRYPTOAUTH_SOURCE_DIR}/lib)
target_link_libraries(ace-rs-mg mongoose mbedtls mbedcrypto tinycbor ${CRYPTOAUTH_SOURCE_DIR}/.build/libcryptoauth.a)
target_link_libraries(edhoc-test mbedtls mbedcrypto tinycbor ${CRYPTOAUTH_SOURCE_DIR}/.build/libcryptoauth.a)
#target_link_libraries(client-coap-mg mongoose mbedtls mbedcrypto tinycbor ${CRYPTOAUTH_SOURCE_DIR}/.build/libcryptoauth.a)
#target_link_libraries(server-coap-mg mongoose mbedtls mbedcrypto tinycbor ${CRYPTOAUTH_SOURCE_DIR}/.build/libcryptoauth.a)

foreach(COAP_TARGET client-coap-mg server-coap-mg)
    target_include_directories(${COAP_TARGET} PUBLIC ${CRYPTOAUTH_SOURCE_DIR}/lib)
    target_link_libraries(${COAP_TARGET} mongoose mbedtls mbedcrypto tinycbor ${CRYPTOAUTH_SOURCE_DIR}/.build/libcryptoauth.a)
endforeach(COAP_TARGET)
